feat(security,usuario): adicionar spring-security, configurar rotas publicas do swagger e crud de usuario